--- a/index.html
+++ b/index.html
@@ -321,8 +321,8 @@
                         <div class="s-booking-tabs">
                             <!-- Nav tabs -->
                             <ul class="nav nav-tabs border-0">
-                                <li class="active">
-                                    <a class="s-book-tab hvr-icon-wobble-vertical" data-toggle="tab" href="#Location">
+                                <li>
+                                    <a class="s-book-tab hvr-icon-wobble-vertical active" data-toggle="tab" href="#Location">
                                         <img src="images/icon/placeholder.svg" class="position-relative hvr-icon" style="height: 17px;top: -2px;" /> Book & Play
                                     </a>
                                 </li>
@@ -342,7 +342,7 @@
                         <div class="d-flex bottom-xs flex-column">
                             <div class="tab-content">
 
-                                <div id="Location" class="tab-pane fade in active">
+                                <div id="Location" class="tab-pane fade show active">
                                     <div class="tg-fixturedetail mb-0">
                                         <div class="tg-fixturecounter mb-0" style="background:none">
                                             <div class="tg-section-heading">
@@ -440,7 +440,7 @@
                             <div class="item1">
                                 <div class="tg-tickets">
                                     <div class="tg-ticket">
-                                        <time class="tg-matchdate">27<span>june</span></time>
+                                        <time class="tg-matchdate"></time>
                                         <div class="tg-matchdetail">
                                             <h4>All Sports</h4>
                                             <ul class="tg-matchmetadata">
