--- a/index.html
+++ b/index.html
@@ -426,11 +426,14 @@
         <!--************************************
             Main Start
     *************************************-->
-        <main id="tg-main" class="tg-main tg-haslayout">
+        <main id="tg-main" class="tg-main1 tg-haslayout">
             <!--************************************
                 About Us Start
         *************************************-->
-            <section class="tg-main-section tg-haslayout">
+            <section class="tg-main-section tg-haslayout bg-transp" style="background: url(../images/bg/onlyTurf.png);
+        background-size: cover;
+        background-position: 100% 45%;
+">
                 <div class="container">
                     <!--<div class="tg-section-name">
                         <h2>Sportiana</h2>
@@ -440,7 +443,9 @@
                             <div class="item1">
                                 <div class="tg-tickets">
                                     <div class="tg-ticket">
-                                        <time class="tg-matchdate"></time>
+                                        <time class="tg-matchdate">
+                                            <img src="../images/icon/sports.svg" style="height:40px;width:40px" />
+                                        </time>
                                         <div class="tg-matchdetail">
                                             <h4>All Sports</h4>
                                             <ul class="tg-matchmetadata">
@@ -453,7 +458,9 @@
                             <div class="item2">
                                 <div class="tg-tickets">
                                     <div class="tg-ticket">
-                                        <time class="tg-matchdate">27<span>june</span></time>
+                                        <time class="tg-matchdate">
+                                            <img src="../images/icon/football-ball.svg" style="height:40px;width:40px" />
+                                        </time>
                                         <div class="tg-matchdetail">
                                             <h4>Football</h4>
                                             <ul class="tg-matchmetadata">
@@ -466,7 +473,9 @@
                             <div class="item3">
                                 <div class="tg-tickets">
                                     <div class="tg-ticket">
-                                        <time class="tg-matchdate">27<span>june</span></time>
+                                        <time class="tg-matchdate">
+                                            <img src="../images/icon/cricket.svg" style="height:40px;width:40px" />
+                                        </time>
                                         <div class="tg-matchdetail">
                                             <h4>Cricket</h4>
                                             <ul class="tg-matchmetadata">
@@ -479,7 +488,9 @@
                             <div class="item4">
                                 <div class="tg-tickets">
                                     <div class="tg-ticket">
-                                        <time class="tg-matchdate">27<span>june</span></time>
+                                        <time class="tg-matchdate">
+                                            <img src="../images/icon/sport.svg" style="height:40px;width:40px" />
+                                        </time>
                                         <div class="tg-matchdetail">
                                             <h4>Fitness & Events</h4>
                                             <ul class="tg-matchmetadata">
@@ -492,7 +503,9 @@
                             <div class="item5">
                                 <div class="tg-tickets">
                                     <div class="tg-ticket">
-                                        <time class="tg-matchdate">27<span>june</span></time>
+                                        <time class="tg-matchdate">
+                                            <img src="../images/icon/gift-card.svg" style="height: 40px;width: 40px;" />
+                                        </time>
                                         <div class="tg-matchdetail">
                                             <h4>Offers</h4>
                                             <ul class="tg-matchmetadata">
