--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
             <!--************************************
                 About Us Start
         *************************************-->
-            <section class="tg-main-section tg-haslayout bg-transp" style="background: url(../images/bg/onlyTurf.png);
+            <section class="tg-main-section tg-haslayout bg-transp" style="background: url(images/bg/onlyTurf.png);
         background-size: cover;
         background-position: 100% 45%;
 ">
@@ -444,7 +444,7 @@
                                 <div class="tg-tickets">
                                     <div class="tg-ticket">
                                         <time class="tg-matchdate">
-                                            <img src="../images/icon/sports.svg" style="height:40px;width:40px" />
+                                            <img src="images/icon/sports.svg" style="height:40px;width:40px" />
                                         </time>
                                         <div class="tg-matchdetail">
                                             <h4>All Sports</h4>
@@ -459,7 +459,7 @@
                                 <div class="tg-tickets">
                                     <div class="tg-ticket">
                                         <time class="tg-matchdate">
-                                            <img src="../images/icon/football-ball.svg" style="height:40px;width:40px" />
+                                            <img src="images/icon/football-ball.svg" style="height:40px;width:40px" />
                                         </time>
                                         <div class="tg-matchdetail">
                                             <h4>Football</h4>
@@ -474,7 +474,7 @@
                                 <div class="tg-tickets">
                                     <div class="tg-ticket">
                                         <time class="tg-matchdate">
-                                            <img src="../images/icon/cricket.svg" style="height:40px;width:40px" />
+                                            <img src="images/icon/cricket.svg" style="height:40px;width:40px" />
                                         </time>
                                         <div class="tg-matchdetail">
                                             <h4>Cricket</h4>
@@ -489,7 +489,7 @@
                                 <div class="tg-tickets">
                                     <div class="tg-ticket">
                                         <time class="tg-matchdate">
-                                            <img src="../images/icon/sport.svg" style="height:40px;width:40px" />
+                                            <img src="images/icon/sport.svg" style="height:40px;width:40px" />
                                         </time>
                                         <div class="tg-matchdetail">
                                             <h4>Fitness & Events</h4>
@@ -504,7 +504,7 @@
                                 <div class="tg-tickets">
                                     <div class="tg-ticket">
                                         <time class="tg-matchdate">
-                                            <img src="../images/icon/gift-card.svg" style="height: 40px;width: 40px;" />
+                                            <img src="images/icon/gift-card.svg" style="height: 40px;width: 40px;" />
                                         </time>
                                         <div class="tg-matchdetail">
                                             <h4>Offers</h4>
