--- a/index.html
+++ b/index.html
@@ -430,10 +430,7 @@
             <!--************************************
                 About Us Start
         *************************************-->
-            <section class="tg-main-section tg-haslayout bg-transp" style="background: url(images/bg/onlyTurf.png);
-        background-size: cover;
-        background-position: 100% 45%;
-">
+            <section class="tg-main-section tg-haslayout bg-transp">
                 <div class="container">
                     <!--<div class="tg-section-name">
                         <h2>Sportiana</h2>
