--- a/index.html
+++ b/index.html
@@ -427,8 +427,8 @@
             <section class="tg-main-section tg-haslayout bg-transp">
                 <div class="container">
                     <!--<div class="tg-section-name">
-                        <h2>Sportiana</h2>
-                    </div>-->
+                <h2>Sportiana</h2>
+            </div>-->
 
                     <div class="s-grid-container">
                         <div class="item1">
@@ -515,6 +515,152 @@
                 </div>
             </section>
 
+            <section class="tg-main-section tg-haslayout tg-bgdark d-none">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-12 col-xs-12">
+                            <div class="tg-statistics">
+                                <div class="tg-statistic tg-goals">
+                                    <span class="tg-icon icon-Icon1"></span>
+                                    <h2><span class="tg-statistic-count" data-from="0" data-to="2700" data-speed="8000" data-refresh-interval="50">2700</span></h2>
+                                    <h3>Goals</h3>
+                                </div>
+                                <div class="tg-statistic tg-activeplayers">
+                                    <span class="tg-icon icon-Icon2"></span>
+                                    <h2><span class="tg-statistic-count" data-from="0" data-to="1673" data-speed="8000" data-refresh-interval="50">1673</span></h2>
+                                    <h3>Active Players</h3>
+                                </div>
+                                <div class="tg-statistic tg-activeteams">
+                                    <span class="tg-icon icon-Icon3"></span>
+                                    <h2><span class="tg-statistic-count" data-from="0" data-to="236" data-speed="8000" data-refresh-interval="50">236</span></h2>
+                                    <h3>Active Teams</h3>
+                                </div>
+                                <div class="tg-statistic tg-earnedawards">
+                                    <span class="tg-icon icon-Icon4"></span>
+                                    <h2><span class="tg-statistic-count" data-from="0" data-to="197" data-speed="8000" data-refresh-interval="50">197</span></h2>
+                                    <h3>Earned Awards</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+
+            <section class=" tg-haslayout tg-bgstyleone">
+                <div class="tg-bgboxone"></div>
+                <div class="tg-bgboxtwo"></div>
+                <div class="tg-bgpattrant">
+                    <div class="container position-relative">
+                        <div class="row">
+                            <div id="tg-player-slider" class="tg-player-slider tg-haslayout" style="padding: 40px 0;">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide swiper-slide-next">
+                                        <div class="tg-upcomingmatch-counter">
+                                            <div class="col-md-6 col-sm-6 col-xs-12">
+
+                                                <img src="images/slider/b4.jpg" class="thumbnail" alt="image description">
+
+                                            </div>
+                                            <div class="col-md-6 col-sm-6 col-xs-12">
+                                                <div class="tg-contentbox">
+                                                    <div class="tg-section-heading"><h2>Gladiators <span>VS</span> Horned Frogs</h2></div>
+                                                    <div class="tg-description">
+                                                        <p>Consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua enim ad minimam quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                                    </div>
+
+                                                    <div class="tg-btnbox">
+                                                        <a class="tg-btn" href="#"><span>read more</span></a>
+                                                        <a class="tg-btn" href="#"><span>book my ticket</span></a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="swiper-slide swiper-slide-next">
+                                        <div class="tg-upcomingmatch-counter d-flex align-items-center justify-content-center h-100">
+                                            <div class="col-md-6 col-sm-6 col-xs-12">
+
+                                                <img src="images/slider/bg3.jpg" class="thumbnail" alt="image description">
+
+                                            </div>
+                                            <div class="col-md-6 col-sm-6 col-xs-12">
+                                                <div class="tg-contentbox">
+                                                    <div class="tg-section-heading"><h2>JB <span>VS</span> Horned Frogs</h2></div>
+                                                    <div class="tg-description">
+                                                        <p>Consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua enim ad minimam quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                                    </div>
+
+                                                    <div class="tg-btnbox">
+                                                        <a class="tg-btn" href="#"><span>read more</span></a>
+                                                        <a class="tg-btn" href="#"><span>book my ticket</span></a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="swiper-slide swiper-slide-next">
+                                        <div class="tg-upcomingmatch-counter d-flex align-items-center justify-content-center h-100">
+                                            <div class="col-md-6 col-sm-6 col-xs-12">
+
+                                                <img src="images/slider/bg.jpg" class="thumbnail" alt="image description">
+
+                                            </div>
+                                            <div class="col-md-6 col-sm-6 col-xs-12">
+                                                <div class="tg-contentbox">
+                                                    <div class="tg-section-heading"><h2>JB <span>VS</span> Horned Frogs</h2></div>
+                                                    <div class="tg-description">
+                                                        <p>Consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua enim ad minimam quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                                    </div>
+
+                                                    <div class="tg-btnbox">
+                                                        <a class="tg-btn" href="#"><span>read more</span></a>
+                                                        <a class="tg-btn" href="#"><span>book my ticket</span></a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="swiper-slide swiper-slide-next">
+                                        <div class="tg-upcomingmatch-counter d-flex align-items-center justify-content-center h-100">
+                                            <div class="col-md-6 col-sm-6 col-xs-12">
+
+                                                <img src="images/slider/bg2.jpg" class="thumbnail" alt="image description">
+
+                                            </div>
+                                            <div class="col-md-6 col-sm-6 col-xs-12">
+                                                <div class="tg-contentbox">
+                                                    <div class="tg-section-heading"><h2>JB <span>VS</span> Horned Frogs</h2></div>
+                                                    <div class="tg-description">
+                                                        <p>Consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua enim ad minimam quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                                    </div>
+
+                                                    <div class="tg-btnbox">
+                                                        <a class="tg-btn" href="#"><span>read more</span></a>
+                                                        <a class="tg-btn" href="#"><span>book my ticket</span></a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+
+                        </div>
+                        <div class="tg-themebtnnext" style="border-color:#eee"><span class="fa fa-angle-down text-white"></span></div>
+                        <div class="tg-themebtnprev swiper-button-disabled" style="border-color:#eee"><span class="fa fa-angle-up text-white"></span></div>
+                    </div>
+                </div>
+            </section>
+
+            
+
+
+
             <section class="tg-main-section tg-haslayout full-pattern">
                 <div class="container">
                     <div class="tg-section-name">
@@ -536,7 +682,7 @@
                                                     THE BEST FITNESS THEME WITH ALL THE NECESSARY IN-BUILT FEATURES
                                                 </h2>
                                             </div>
-                                         
+
                                             <div class="tg-description">
                                                 <p>
                                                     <span class="darkgoldenrod">Sportiana</span>  is a <span class="darkgoldenrod"> Trendy Theme</span> with the latest features and stays updated to the latest technological equipments.
@@ -557,6 +703,8 @@
                     </div>
                 </div>
             </section>
+
+
 
         </main>
         <!--************************************
