--- a/GroundBook.html
+++ b/GroundBook.html
@@ -223,7 +223,7 @@
                 Banner Start
         *************************************-->
         <div class="tg-banner tg-haslayout">
-            <div class="tg-imglayer">
+            <div class="tg-imglayer gbLayer">
         <img src="images/slider/bg1.jpg" alt="image desctription" style="position: absolute; bottom: -10%;">
     </div>
             
